fix: css spacing summary

--- a/public/styles.css
+++ b/public/styles.css
@@ -123,7 +123,6 @@ body {
     font-weight: bold;
     text-align: center;
     font-size: 1.4em;
-    padding: 10px;
 }
 
 .headerHead {
@@ -149,14 +148,15 @@ hr {
 }
 
 .mapContainer {
-    flex: 50%;
+    width: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
     font-family: 'Amatic SC', cursive;
-    background: rgb(196, 196, 196);
     font-size: 2em;
-    margin-top: 20px;
+    margin: 0 5px 10px 10px;
+    height: 100%;
+    color: black;
 }
 
 .mapa {
@@ -226,11 +226,25 @@ hr {
     display: inline-block;
 }
 
+.summary {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+}
+
 .summaryListContainer {
     display: flex;
-    flex: 50%;
     flex-direction: column;
+    margin: 0 10px 10px 5px;
     align-items: center;
+    width: 50%;
+    font-family: 'Amatic SC', cursive;
+    font-size: 2em;
+    height: 100%;
+    color: black;
+    letter-spacing: 3px;
+    font-weight: bold;
 }
 
 .summaryListContainer__header {}
@@ -241,13 +255,12 @@ hr {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    font-family: 'Amatic SC', cursive;
-    font-weight: bold;
-    font-size: 1.5em;
-    letter-spacing: 3px;
-    color: white;
+    /* font-family: 'Amatic SC', cursive; */
+    /* font-weight: bold; */
+    /* letter-spacing: 3px; */
+    /* color: white; */
     padding: 10px;
-    background: rgb(196, 196, 196);
+    /* background: rgb(196, 196, 196); */
     margin: 5px 0 5px 0;
 }
 
@@ -344,6 +357,7 @@ hr {
     }
     .mapContainer {
         order: 3;
+        margin-top: 20px;
     }
 }
 
